--- a/DAS Web Project/VltAuto.css
+++ b/DAS Web Project/VltAuto.css
@@ -1,27 +1,71 @@
-#vltTitle{
-    text-align: center;
-    padding-top: 20px;
-    font-size: 34px;
+h1{
+    margin: 10px;
 }
 nav{
+    margin: 10px;
+    padding-left: 15%;
+    padding-right: 15%;
+    padding-bottom: 10px;
+}
+nav ul{
     text-align: center;
-    display:block;
+    background-color: lightslategray;
+    padding: 0;
+    margin: 0;
 }
-nav a{
+nav ul li{ /*nav button config*/
+    display: inline-block;
+    list-style-type: none;
+    background-color: lightslategray;
+}
+nav ul li a{
+    display: block;
     text-decoration: none;
-    font-size: 24px;
-}
-nav a:link{
-    color: #000000;
-}
-nav a:visited{
-    color: #000000;
+    font-family: sans-serif;
+    font-size: 1.3em;
+    color: #ffffff;
+    padding: 10px 34px 10px 
 }
 nav a:hover{
-    color: turquoise;
+    background-color: black;
 }
-nav li{
+nav a:visited{
+    color: #ffffff;
+}
+nav a:active{
+    background-color: gray;
+}
+img{
+    max-width: 30%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+#vltTitle{
     display: inline;
-    padding-left: 10%;
-    padding-right: 10%;
+    text-align: center;
+    font-size: 36px;
+    padding-bottom: 14px;
+    margin-bottom: 14px;
+}
+#address{
+    text-align: center;
+    font-size: 18px;
+    padding-bottom: 10px;
+}
+.sideBySide img{
+    float:left;
+    padding-left: 20%;
+    padding-right: 5%;
+}
+.sideBySide p{
+    overflow: hidden;
+    font-size: 1em;
+    font-family: sans-serif;
+    text-align: justify;
+    padding-right: 20%;
+}
+.sideBySide h3{
+    display: block;
+    font-family: sans-serif;
 }
